<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs_package</name>
  <version>0.0.1</version>
  <description>Remote Station (RS) Package for Publishing Joystick Inputs</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>setuptools</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>